k8s/cluster-root/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openbao
---
apiVersion: v1
kind: Namespace
metadata:
  name: spire-root
